# api-benchmarks

./: .gitignore  README.md  benchmark.sh
go-chi/: go.mod  main.go
java-quarkus/: pom.xml
java-quarkus/src/main/java/benchmark/: Book.java  BookResource.java
java-quarkus/src/main/resources/: application.properties
js-bun/: server.js
python-django/: manage.py
python-django/benchmark/: settings.py  urls.py  views.py  wsgi.py
rust-axum/: Cargo.toml
rust-axum/src/: main.rs
